# MedyaLib

./: CMakeLists.txt  README.md  resources.qrc
.github/workflows/: cmake.yml
cpp/: CMakeLists.txt  badgetree.cpp  badgetree.h  badgetree.ui  databasehelper.cpp  databasehelper.h  main.cpp  medyalib.cpp  medyalib.h  medyalib.ui  presentationwidget.cpp  presentationwidget.h  presentationwidget.ui
sql-queries/: droptableifexists  tag-person-search
